--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon server"
+    "start:dev": "nodemon server",
+    "start": "node server"
+
   },
   "keywords": [],
   "author": "",
